Get slides only

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -52,7 +52,7 @@ header {
   img {
     background-size: contain;
     position: absolute;
-    z-index: -1;
+    // z-index: -1;
     width: 100%;
   }
 }
